@@ -1,15 +1,17 @@
-package tests;
-
 import managers.Managers;
 import managers.TaskManager;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import tasks.*;
+import tasks.Epic;
+import tasks.Subtask;
+import tasks.Task;
+import util.TaskStatus;
 
 import java.util.ArrayList;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 class InMemoryTaskManagersTest {
 
@@ -22,7 +24,7 @@ class InMemoryTaskManagersTest {
     }
 
     @Test
-    void SubtasksCanBeDeletedByIdAndAllOfThemCanBeCleared() {
+    void subtasksCanBeDeletedByIdAndAllOfThemCanBeCleared() {
         Epic epic = new Epic("epic", "none");
         for (int i = 0; i < 5; i++) {
             new Subtask(String.format("Subtask 1.#%d", i), "None", epic);
@@ -48,7 +50,7 @@ class InMemoryTaskManagersTest {
     }
 
     @Test
-    void EpicsCanBeDeletedByIdAndAllOfThemCanBeCleared() {
+    void epicsCanBeDeletedByIdAndAllOfThemCanBeCleared() {
         Epic epic = new Epic("epic", "none");
         for (int i = 0; i < 2; i++) {
             new Subtask(String.format("Subtask 1.#%d", i), "None", epic);
@@ -79,7 +81,7 @@ class InMemoryTaskManagersTest {
     }
 
     @Test
-    void TasksCanBeDeletedByIdAndAllOfThemCanBeCleared() {
+    void tasksCanBeDeletedByIdAndAllOfThemCanBeCleared() {
         for (int i = 0; i < 5; i++) {
             manager.createTask(new Task(String.format("Task #%d", i), "None"));
         }
@@ -92,39 +94,39 @@ class InMemoryTaskManagersTest {
     }
 
     @Test
-    void EpicStatusIsUpdatedCorrectly() {
+    void epicStatusIsUpdatedCorrectly() {
         Epic epic = new Epic("Epic", "Test epic");
         Subtask subtask1 = new Subtask("Subtask 1", "1.1", epic);
         Subtask subtask2 = new Subtask("Subtask 2", "1.2", epic);
         manager.createEpic(epic);
-        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.NEW
-                , "не корректный статус при создании эпика");
+        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.NEW,
+                "не корректный статус при создании эпика");
 
         subtask1.updateStatus(TaskStatus.DONE);
         manager.updateSubtask(subtask1);
-        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.IN_PROGRESS
-                , "не корректный статус при обновление одной из подзадач");
+        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.IN_PROGRESS,
+                "не корректный статус при обновление одной из подзадач");
 
         manager.deleteSubtaskById(1);
-        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.NEW
-                , "Статус не обновился до правильного при удалении одной из подзадач");
-        assertEquals(manager.getEpic(0).getSubtasks().size(), 1
-                , "Задача не была удалена из эпика");
+        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.NEW,
+                "Статус не обновился до правильного при удалении одной из подзадач");
+        assertEquals(manager.getEpic(0).getSubtasks().size(), 1,
+                "Задача не была удалена из эпика");
 
         subtask2.updateStatus(TaskStatus.DONE);
         manager.updateSubtask(subtask2);
-        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.DONE
-                , "статус эпика не корректен при завершении всех задач");
+        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.DONE,
+                "статус эпика не корректен при завершении всех задач");
 
         Subtask subtask3 = new Subtask("Subtask 3", "1.3", epic);
         manager.createSubtask(subtask3);
-        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.IN_PROGRESS
-                , "статус эпика не обнавлен при добавлении новой задачи");
+        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.IN_PROGRESS,
+                "статус эпика не обнавлен при добавлении новой задачи");
 
         subtask3.updateStatus(TaskStatus.DONE);
         manager.updateSubtask(subtask3);
-        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.DONE
-                , "статус эпика не корректен при завершении всех задач");
+        assertEquals(manager.getEpic(0).getStatus(), TaskStatus.DONE,
+                "статус эпика не корректен при завершении всех задач");
     }
 
     @Test
@@ -150,18 +152,26 @@ class InMemoryTaskManagersTest {
     }
 
     @Test
-    void HistoryTracksOnlyLast10Tasks() {
-        for (int i = 1; i <= 11; i++) {
-            Task task = new Task(String.format("Task #%d", i), "test regular task");
-            manager.createTask(task);
-            manager.getTask(i - 1);
-        }
+    void historyCantContainDuplicates() {
+        Task task = new Task("Task 1", "test task");
+        Task extraTask = new Task("Task 2", "additional task");
+
+        manager.createTask(task);
+        manager.createTask(extraTask);
+
+        manager.getTask(0);
+        manager.getTask(1);
+        manager.getTask(0);
+
         final List<Task> history = manager.getHistory();
-        assertEquals(history.size(), 10, "в истории количество задач превышающее максимум");
+        final List<Task> correctHistory = List.of(extraTask, task);
+
+        assertEquals(2, history.size(), "содержатся дубликаты задач");
+        assertEquals(correctHistory, history);
     }
 
     @Test
-    void InMemoryTaskManagerDonTConflictWithTasksWithCustomId() {
+    void inMemoryTaskManagerDonTConflictWithTasksWithCustomId() {
         Task task = new Task("Regular Task", "Task");
         manager.createTask(task);
         Task task2 = new Task("Regular Task 2", "Task 2");
@@ -173,7 +183,7 @@ class InMemoryTaskManagersTest {
     }
 
     @Test
-    void InMemoryTaskManagerAdjustsIdWhenEncountersTasksWithCustomId() {
+    void inMemoryTaskManagerAdjustsIdWhenEncountersTasksWithCustomId() {
         Task task = new Task("Regular Task 1", "Task 1");
         task.setId(1);
         manager.createTask(task);
@@ -188,25 +198,25 @@ class InMemoryTaskManagersTest {
     }
 
     @Test
-    void InMemoryTaskManagerDoesNotChangeDataAfterAddingTask() {
+    void inMemoryTaskManagerDoesNotChangeDataAfterAddingTask() {
         Task task = new Task("Task", "Original task");
         manager.createTask(task);
 
-        assertEquals(task.getName(), manager.getTask(0).getName()
-                , "названия не совпадают");
-        assertEquals(task.getDescription(), manager.getTask(0).getDescription()
-                , "описания не совпадают");
+        assertEquals(task.getName(), manager.getTask(0).getName(),
+                "названия не совпадают");
+        assertEquals(task.getDescription(), manager.getTask(0).getDescription(),
+                "описания не совпадают");
     }
 
     @Test
-    void HistoryManagerContainsPreviousVersionOfATaskAndData() {
+    void historyManagerContainsPreviousVersionOfATaskAndData() {
         Task task = new Task("Go shopping", "buy milk");
         manager.createTask(task);
         manager.getTask(0);
         task.updateStatus(TaskStatus.DONE);
         manager.updateTask(task);
 
-        final Task previousTaskVersion = manager.getHistory().get(0);
+        final Task previousTaskVersion = manager.getHistory().getFirst();
 
         assertEquals(previousTaskVersion, manager.getTask(0), "обновленная версия совпадает со старой");
     }
